# fenics-cookiecutter

./: LICENCE  README.md  cookiecutter.json  readme.md
hooks/: LICENCE  post_gen_hooks.py  pre_gen_hooks.py
{{ cookiecutter.project_slug }}/: .bumpversion.cfg  setup.cfg
{{ cookiecutter.project_slug }}/.devcontainer/: Dockerfile  devcontainer.json
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
