{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
{%- if cookiecutter.open_source_license in license_classifiers %}
license= {{ cookiecutter.open_source_license }}
{%- endif %}

description= {{ cookiecutter.project_short_description }}
long_description = file: README.rst
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
classifiers=
{%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   scipy
   matplotlib
   numba
   tqdm
   pandas
   pygmsh
   meshio
   h5py

[options.packages.find]
where=src

[bdist_wheel]
universal = 1
